--- a/chat-vuejs/package.json
+++ b/chat-vuejs/package.json
@@ -14,6 +14,7 @@
     "actioncable": "^5.2.8-1",
     "axios": "^1.6.8",
     "core-js": "^3.8.3",
+    "date-fns": "^3.6.0",
     "vue": "^3.2.13",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.0.3"
